set up react router + create and design componoent prelogin signin signup

--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,55 @@
 body {
-  margin: 0;
-  padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: 'Rubik', sans-serif;
+  font-size: 16px;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+a.link {
+  color: #3F799C;
+  text-decoration: underline;
+}
+
+a.link:hover {
+  text-decoration: none;
+}
+
+.login .logo {
+  width: 20em;
+  height: 20em;
+  margin: 2em 0 1.5em 0;
+}
+
+.login .logo img {
+  height: 100%;
+  width: auto;
+}
+
+.login h1 {
+  margin-bottom: 1em;
+}
+
+.login p {
+  margin-bottom: .5em;
+}
+
+.login .signin-btn, .login .signup-btn {
+  width: 20vw;
+  border: none;
+  padding: .5em 1.5em;
+}
+
+.login .signin-btn {
+  background-color: #3F799C;
+  margin-bottom: 1.5em;
+}
+
+.login .signup-btn {
+  background-color: #F9F871;
+}
+
+.login form {
+  width: 33vw;
+}
+
+.login .form-check {
+  margin-bottom: 2em;
 }
